--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -65,4 +65,9 @@
     <string name="home_support_title">Support Us</string>
     <string name="home_support_content">KernelSU is, and always will be, free, and open source. You can however show us that you care by making a donation.</string>
     <string name="about_source_code"><![CDATA[View source code at %1$s<br/>Join our %2$s channel]]></string>
+    <string name="app_profile" translatable="false">App Profile</string>
+    <string name="app_profile_title1">Application</string>
+    <string name="app_profile_title2" translatable="false">Root Profile</string>
+    <string name="app_profile_root_switch">Grant Root</string>
+    <string name="app_profile_allowlist">Allowlist</string>
 </resources>
