manager: minor fixes for app profile

--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -62,7 +62,12 @@
     <string name="home_support_content">KernelSU 将保持免费和开源，向开发者捐赠以表示支持。</string>
     <string name="about_source_code"><![CDATA[在 %1$s 查看源码<br/>加入我们的 %2$s 频道<br/>加入我们的 <b><a href="https://pd.qq.com/s/8lipl1brp">QQ 频道</a></b>]]></string>
     <string name="app_profile_title1">应用</string>
-    <string name="app_profile_root_switch">Root 权限</string>
-    <string name="app_profile_denylist">Denylist</string>
     <string name="app_profile_title0">全局</string>
+    <string name="app_profile_allowlist">白名单</string>
+    <string name="app_profile_denylist">黑名单</string>
+    <string name="app_profile_mode">工作模式</string>
+    <string name="failed_to_set_allowlist_mode">全换到白名单模式失败！</string>
+    <string name="failed_to_add_to_allowlist">添加 %s 到白名单失败！</string>
+    <string name="failed_to_add_to_denylist">添加 %s 到黑名单失败！</string>
+    <string name="failed_to_set_denylist_mode">切换到黑名单模式失败！</string>
 </resources>
