--- a/manager/app/src/main/res/values-zh-rHK/strings.xml
+++ b/manager/app/src/main/res/values-zh-rHK/strings.xml
@@ -64,4 +64,11 @@
     <string name="home_support_title">支持我們</string>
     <string name="home_support_content">KernelSU 是免費且開源的，您可以透過捐贈來向我們展示您對我們的關心。</string>
     <string name="about_source_code"><![CDATA[在 %1$s 中檢視原始碼<br/>加入我們的 %2$s 頻道]]></string>
+    <string name="app_profile_allowlist">白名單</string>
+    <string name="app_profile_denylist">黑名單</string>
+    <string name="app_profile_mode">工作模式</string>
+    <string name="failed_to_set_allowlist_mode">全換到白名單模式失敗！ </string>
+    <string name="failed_to_add_to_allowlist">添加 %s 到白名單失敗！ </string>
+    <string name="failed_to_add_to_denylist">添加 %s 到黑名單失敗！ </string>
+    <string name="failed_to_set_denylist_mode">切換到黑名單模式失敗！ </string>
 </resources>
