--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -76,4 +76,6 @@
     <string name="profile_namespace_individual">Individual</string>
     <string name="profile_unmount_modules">Unmount modules</string>
     <string name="profile_allow_root_request">Allow root request</string>
+    <string name="failed_to_update_root_profile">Failed to update root profile for %s</string>
+    <string name="failed_to_update_app_profile">Failed to update app profile for %s</string>
 </resources>
