Update Indonesian translation  (#532)

--- a/manager/app/src/main/res/values-in/strings.xml
+++ b/manager/app/src/main/res/values-in/strings.xml
@@ -1,64 +1,79 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name" translatable="false">KernelSU</string>
+
     <string name="home">Beranda</string>
-    <string name="home_not_installed">Tidak terinstall</string>
-    <string name="home_click_to_install">Klik untuk menginstall</string>
+    <string name="home_not_installed">Tidak terpasang</string>
+    <string name="home_click_to_install">Klik untuk memasang</string>
     <string name="home_working">Bekerja</string>
     <string name="home_working_version">Versi: %d</string>
-    <string name="home_superuser_count">Superuser: %d</string>
-    <string name="home_module_count">Module: %d</string>
+    <string name="home_superuser_count">Superusers: %d</string>
+    <string name="home_module_count">Modul: %d</string>
     <string name="home_unsupported">Tidak didukung</string>
-    <string name="home_unsupported_reason">Saat ini kernelSu hanya mendukung GKI kernel</string>
-    <string name="home_copied_to_clipboard">Salin ke clipboard</string>
+    <string name="home_unsupported_reason">KernelSU hanya mendukung kernel GKI saat ini</string>
+    <string name="home_copied_to_clipboard">Disalin ke clipboard</string>
     <string name="home_support">Dukungan</string>
+
     <string name="home_kernel">Kernel</string>
     <string name="home_arch">Arch</string>
-    <string name="home_manager_version">Versi manager</string>
-    <string name="home_api">API Level</string>
+    <string name="home_manager_version">Versi Manager</string>
+    <string name="home_api">Level API</string>
     <string name="home_abi">ABI</string>
-    <string name="home_fingerprint">Fingerprint</string>
-    <string name="home_securitypatch">Patch keamanan</string>
-    <string name="home_selinux_status">Status SElinux</string>
-    <string name="selinux_status_disabled">Cacat</string>
+    <string name="home_fingerprint">Sidik jari</string>
+    <string name="home_securitypatch">Patch Keamanan</string>
+
+    <string name="home_selinux_status">status SELinux</string>
+    <string name="selinux_status_disabled">Dinonaktifkan</string>
     <string name="selinux_status_enforcing">Enforcing</string>
     <string name="selinux_status_permissive">Permissive</string>
-    <string name="selinux_status_unknown">Tidak tersedia</string>
+    <string name="selinux_status_unknown">Tidak dikenal</string>
     <string name="superuser">Superuser</string>
     <string name="superuser_failed_to_grant_root">Gagal mengizinkan root untuk %d</string>
-    <string name="superuser_allow_root_confirm">Ijinkan akses root untuk aplikasi %s?</string>
-    <string name="module_failed_to_enable">Gagal mengaktifkan module: %s</string>
-    <string name="module_failed_to_disable">Gagal menonaktifkan module: %s</string>
-    <string name="module_empty">Tidak ada module terpasang</string>
-    <string name="module">Module</string>
-    <string name="uninstall">Hapus</string>
-    <string name="module_install">Pasang module</string>
-    <string name="install">Memasang module...</string>
-    <string name="reboot">Reboot perangkat</string>
+    <string name="superuser_allow_root_confirm">Apakah Anda yakin untuk mengizinkan akses root ke %s?</string>
+    <string name="module_failed_to_enable">Gagal mengaktifkan modul: %s</string>
+    <string name="module_failed_to_disable">Gagal menonaktifkan modul: %s</string>
+    <string name="module_empty">Tidak ada modul terpasang</string>
+
+    <string name="module">Modul</string>
+    <string name="uninstall">Copot</string>
+    <string name="module_install">Pasang</string>
+    <string name="install">Pasang</string>
+    <string name="reboot">Reboot</string>
     <string name="settings">Pengaturan</string>
-    <string name="reboot_userspace">Soft Reboot</string>
+    <string name="reboot_userspace">Reboot Lembut</string>
     <string name="reboot_recovery">Reboot ke Recovery</string>
     <string name="reboot_bootloader">Reboot ke Bootloader</string>
     <string name="reboot_download">Reboot ke Download</string>
     <string name="reboot_edl">Reboot ke EDL</string>
     <string name="about">Tentang</string>
     <string name="require_kernel_version_8">Membutuhkan KernelSU Versi 8+</string>
-    <string name="module_uninstall_confirm">Apakah anda yakin ingin menghapus module ini %s?</string>
-    <string name="module_uninstall_success">%s terhapus</string>
-    <string name="module_uninstall_failed">Gagal untuk menghapus: %s</string>
+    <string name="module_uninstall_confirm">Apakah Anda yakin ingin mencopot modul %s?</string>
+    <string name="module_uninstall_success">%s Tercopot</string>
+    <string name="module_uninstall_failed">Gagal untuk mencopot: %s</string>
     <string name="module_version">Versi</string>
     <string name="module_author">Pembuat</string>
-    <string name="module_overlay_fs_not_available">overlayfs tidak tersedia, module tidak bekerja!</string>
+    <string name="module_overlay_fs_not_available">overlayfs tidak tersedia, modul tidak dapat bekerja!</string>
     <string name="refresh">Segarkan</string>
-    <string name="show_system_apps">Tampilkan system apps</string>
-    <string name="hide_system_apps">Sembunyikan system apps</string>
-    <string name="send_log">Kirim logs</string>
+    <string name="show_system_apps">Tampilkan apl sistem</string>
+    <string name="hide_system_apps">Sembunyikan apl sistem</string>
+    <string name="send_log">Kirim Log</string>
     <string name="safe_mode">Mode aman</string>
-    <string name="reboot_to_apply">Restart untuk menerapkan</string>
-    <string name="module_magisk_conflict">Module akan di nonaktifkan karna konflik dengan magisk\'s!</string>
-    <string name="home_learn_kernelsu">Belajar KernelSU</string>
-    <string name="home_learn_kernelsu_url">https://kernelsu.org/id_ID/guide/what-is-kernelsu.html</string>
-    <string name="home_click_to_learn_kernelsu">Cara menginstall KernelSu dan menggunakan Module</string>
-    <string name="home_support_title">Dukung kami</string>
-    <string name="home_support_content">KernelSU akan selalu gratis dan open source. Namun Anda dapat menunjukkan kepada kami bahwa Anda peduli dengan memberikan sedikit donasi.</string>
-    <string name="about_source_code"><![CDATA[Lihat sumber kode di %1$s<br/>Gabung sekarang %2$s channel]]></string>
+    <string name="reboot_to_apply">Reboot untuk menerapkan</string>
+    <string name="module_magisk_conflict">Modul dinonaktifkan karena bertentangan dengan Magisk!</string>
+    <string name="home_learn_kernelsu">Pelajari KernelSU</string>
+    <string name="home_learn_kernelsu_url">https://kernelsu.org/guide/what-is-kernelsu.html</string>
+    <string name="home_click_to_learn_kernelsu">Pelajari cara memasang KernelSU dan menggunakan modul</string>
+    <string name="home_support_title">Dukung Kami</string>
+    <string name="home_support_content">KernelSU gratis dan bersumber terbuka, dan akan selalu seperti itu. Bagaimanapun juga Anda dapat menunjukan kepedulian Anda kepada kami dengan mengirimkan sedikit donasi.</string>
+    <string name="about_source_code"><![CDATA[Lihat sumber code di %1$s<br/>Gabung kanal %2$s kami]]></string>
+    <string name="profile">Profil Apl</string>
+    <string name="profile_default">Bawaan</string>
+    <string name="profile_template">Templat</string>
+    <string name="profile_custom">Khusus</string>
+    <string name="profile_name">Nama profil</string>
+    <string name="profile_namespace">Ikat ruang-nama</string>
+    <string name="profile_namespace_inherited">Diwariskan</string>
+    <string name="profile_namespace_global">Universal</string>
+    <string name="profile_namespace_individual">Personal</string>
+    <string name="profile_unmount_modules">Lepas modul</string>
+    <string name="profile_allow_root_request">Izinkan permintaan root</string>
 </resources>
