--- a/manager/app/src/main/res/values-fa/strings.xml
+++ b/manager/app/src/main/res/values-fa/strings.xml
@@ -3,7 +3,7 @@
 <string name="home">خانه</string>
 <string name="home_not_installed">نصب نشده است</string>
 <string name="home_click_to_install">برای نصب ضربه بزنید</string>
-<string name="home_working">کبه درستی کار می‌کند</string>
+<string name="home_working">به درستی کار می‌کند</string>
 <string name="home_working_version">نسخه: %d</string>
 <string name="home_superuser_count">برنامه های با دسترسی روت: %d</string>
 <string name="home_module_count">ماژول‌ها: %d</string>
@@ -20,8 +20,8 @@
 <string name="home_securitypatch">پچ امنیتی</string>
 <string name="home_selinux_status">وضعیت SELinux</string>
 <string name="selinux_status_disabled">غیرفعال</string>
-<string name="selinux_status_enforcing">Enforcing</string>
-<string name="selinux_status_permissive">Permissive</string>
+<string name="selinux_status_enforcing">قانونمند</string>
+<string name="selinux_status_permissive">آزاد</string>
 <string name="selinux_status_unknown">ناشناخته</string>
 <string name="superuser">دسترسی روت</string>
 <string name="superuser_failed_to_grant_root">اعطای دسترسی روت برای %d ناموفق بود</string>
@@ -42,7 +42,7 @@
 <string name="reboot_edl">راه اندازی به EDL</string>
 <string name="about">درباره</string>
 <string name="require_kernel_version_8"> نسخه کرنل مورد نیاز 8+</string>
-<string name="module_uninstall_confirm">آیا مطمئنید که میخواهید مازول %s را پاک کنید؟?</string>
+<string name="module_uninstall_confirm">آیا مطمئنید که میخواهید ماژول %s را پاک کنید؟</string>
 <string name="module_uninstall_success">%s پاک شد</string>
 <string name="module_uninstall_failed">پاک کردن ناموفق بود: %s</string>
 <string name="module_version">نسخه</string>
@@ -69,9 +69,9 @@
 <string name="profile_custom">شخصی سازی شده</string>
 <string name="profile_name">اسم پروفایل</string>
 <string name="profile_namespace">Mount namespace</string>
-<string name="profile_namespace_inherited">inherited</string>
+<string name="profile_namespace_inherited">اثر گرفته</string>
 <string name="profile_namespace_global">گلوبال</string>
-<string name="profile_namespace_individual">شخصی</string>
+<string name="profile_namespace_individual">تکی</string>
 <string name="profile_unmount_modules">جداکردن ماژول ها</string>
 <string name="profile_allow_root_request">اجازه درخواست روت</string>
 </resources>
