--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -61,7 +61,7 @@
     <string name="home_support_title">支持开发</string>
     <string name="home_support_content">KernelSU 将保持免费和开源，向开发者捐赠以表示支持。</string>
     <string name="about_source_code"><![CDATA[在 %1$s 查看源码<br/>加入我们的 %2$s 频道<br/>加入我们的 <b><a href="https://pd.qq.com/s/8lipl1brp">QQ 频道</a></b>]]></string>
-    <string name="require_kernel_version">当前内核版本： %d 过低，管理器无法正常工作，请升级内核版本至 %d 或以上！</string>
+    <string name="require_kernel_version">当前内核版本 %d 过低，管理器无法正常工作，请升级内核版本至 %d 或以上！</string>
     <string name="app_profile_title1">应用</string>
     <string name="app_profile_title0">全局</string>
     <string name="app_profile_allowlist">白名单</string>
