manager: Add desc for umount modules.

--- a/manager/app/src/main/res/values-in/strings.xml
+++ b/manager/app/src/main/res/values-in/strings.xml
@@ -65,5 +65,5 @@
     <string name="profile_namespace_inherited">Diwariskan</string>
     <string name="profile_namespace_global">Universal</string>
     <string name="profile_namespace_individual">Personal</string>
-    <string name="profile_hide_modules">Lepas modul</string>
+    <string name="profile_umount_modules">Lepas modul</string>
 </resources>
