--- a/manager/app/src/main/res/values-fa/strings.xml
+++ b/manager/app/src/main/res/values-fa/strings.xml
@@ -63,5 +63,5 @@
 <string name="profile_namespace_inherited">اثر گرفته</string>
 <string name="profile_namespace_global">گلوبال</string>
 <string name="profile_namespace_individual">تکی</string>
-<string name="profile_hide_modules">جداکردن ماژول ها</string>
+<string name="profile_umount_modules">جداکردن ماژول ها</string>
 </resources>
