--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -65,9 +65,10 @@
     <string name="profile_namespace_inherited">Inherited</string>
     <string name="profile_namespace_global">Global</string>
     <string name="profile_namespace_individual">Individual</string>
-    <string name="profile_hide_modules">Hide modules</string>
-    <string name="failed_to_update_app_profile">Failed to update app profile for %s</string>
+    <string name="profile_umount_modules">Umoun modules</string>
+    <string name="failed_to_update_app_profile">Failed to update App Profile for %s</string>
     <string name="require_kernel_version">The current kernel version %d is too low for the manager to function properly. Please upgrade to version %d or higher!</string>
-    <string name="settings_umount_modules_default">Hide modules by default</string>
-    <string name="settings_umount_modules_default_summary">The global default value for "Hide modules" in App Profiles. If enabled, it will remove all module modifications to the system for applications that do not have a Profile set.</string>
+    <string name="settings_umount_modules_default">Umount modules by default</string>
+    <string name="settings_umount_modules_default_summary">The global default value for \"Umount modules\" in App Profiles. If enabled, it will remove all module modifications to the system for applications that do not have a Profile set.</string>
+    <string name="profile_umount_modules_summary">Enabling this option will allow KernelSU to restore any modified files by the modules for this application.</string>
 </resources>
